name:                NYHUG
version:             0.1.0.0
synopsis:            GPU Demo
description:         Demonstration programs for the New York Haskell Users
                     Group talk "Abstractions for the Functional Roboticist"
                     (August 28, 2013).
license:             BSD3
license-file:        LICENSE
author:              Anthony Cowley
maintainer:          acowley@gmail.com
copyright:           Copyright (C) 2013 Anthony Cowley
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
data-files:          etc/ripples.*

executable nyhug
  main-is:             DemoCam.hs
  other-modules:       Keyboard3D, Window, CLGLInterop, Paths_NYHUG
  build-depends:       base >=4.6 && < 5, vinyl >= 0.1, GLFW-b >= 0.1 && < 0.2,
                       linear >= 1.1, GLUtil >= 0.6, OpenGL >= 2.8, filepath,
                       vinyl-gl >= 0.1, containers >= 0.5 && < 0.6,
                       time >= 1.4, directory >= 1.2, HOpenCV, CLUtil, OpenGLRaw,
                       vector
  hs-source-dirs:      src/CrazyCam
  default-language:    Haskell2010

executable inplace
  main-is:             Inplace.hs
  build-depends:       base >= 4.6 && < 5, time, async, criterion
  hs-source-dirs:      src/Inplace
  default-language:    Haskell2010
  ghc-options:         -O2 -ddump-simpl-stats

executable vinyl-demo
  main-is:             VinylDemo.hs
  build-depends:       base >= 4.6 && < 5, vinyl, criterion
  hs-source-dirs:      src/VinylDemo
  default-language:    Haskell2010
  ghc-options:         -O2

-- executable copilot-demo
--   main-is:             Main.hs
--   other-modules:       Logger, Monitor, OutputGuard, ArduinoCode
--   build-depends:       base >=4.6 && <4.7, transformers >=0.3 && <0.4, 
--                        machines >=0.2 && <0.3, void >=0.6 && <0.7, 
--                        bytestring >=0.10 && <0.11, filemanip >=0.3 && <0.4,
--                        serialport >= 0.4.6.1, copilot, copilot-sbv, sbv, ekg
--   hs-source-dirs:      src/CopilotDemo
--   default-language:    Haskell2010
--   ghc-options:         -threaded "-with-rtsopts=-T -N"

-- executable logger-demo
--   main-is:             TestLogger.hs
--   other-modules:       Logger, Monitor
--   build-depends:       base >=4.6 && <4.7, transformers >=0.3 && <0.4, 
--                        machines >=0.2 && <0.3, void >=0.6 && <0.7, 
--                        bytestring >=0.10 && <0.11, ekg
--   hs-source-dirs:      src/CopilotDemo
--   default-language:    Haskell2010
--   ghc-options:         -threaded "-with-rtsopts=-T -N"